fix display of header for product page on mobile devices

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,3 @@
-@import url(https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap);
 .header-v2 .optimazed__version .drawer__head {
   display: flex;
   justify-content: center;
@@ -174,4 +173,13 @@
 }
 .slideshow-v2 .slideshow__slide {
   position: relative;
+}
+
+@media only screen and (max-width: 749px) {
+  .template-product .product__title__wrapper {
+    padding-right: 0px;
+  }
+  .template-product .product__title__wrapper .product__title {
+    font-size: 20px;
+  }
 }
